# murineshiftwork

./: .bumpversion.cfg  .copier-answers.yml  .flake8  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .secrets.baseline  404.html  CITATION.cff  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DHCP.md  LICENSE  MANIFEST.in  README.md  SERIAL.md  collate_acquisition_data.sh  fabfile.py  index.html  install_apt.sh  install_env.sh  mkdocs.yml  objects.inv  pyproject.toml  pytest.ini  renovate.json  rpi_gpio_receiver_test.py  setup.cfg  setup.py  setup.sh  sitemap.xml  start_local.py  start_this_pybpod.py
.github/templates/: feature_request.md
.github/workflows/: CI.yaml  bump.yaml  ci.yml  docs.yml  install_and_test.yaml  pr-review.yml  release.yml  renovate.yml  test_deploy.yaml
ISSUE_TEMPLATE/: feature.md
api/: index.html
cli/action/: index.html
cli/agent/: index.html
cli/calibration/: index.html
cli/init/: index.html
cli/post/: index.html
cli/run/: index.html
cli/setup/: index.html
cli/subject/: index.html
cli/tasks/: index.html
concepts/architecture/: index.html
concepts/config_system/: index.html
concepts/hook_system/: index.html
concepts/multi_acquisition_and_photometry/: index.html
concepts/plugin_system/: index.html
concepts/session_files/: index.html
docs/: CAMERAS_2026.md  DHCP.md  INSTRUCTIONS_MSW_UPGRADE_20260516.md  NOTES.md  REFACTOR_STATUS.md  SERIAL.md  TODO.md  api.md  barcode_ttl_integration.md  index.md  notes-ephys-acute-insertions.yaml  notes__spindle_induction_trn.md
docs/calibration/: stage.md  water.md
docs/cli/: action.md  agent.md  calibration.md  init.md  post.md  run.md  setup.md  subject.md  tasks.md
docs/concepts/: architecture.md  config_system.md  hook_system.md  multi_acquisition_and_photometry.md  plugin_system.md  session_files.md
docs/getting_started/: installation.md  new_machine.md  quickstart.md
docs/legacy/: CALIBRATION.md  CLI_REFACTOR_PLAN.md  FLIR_AND_HOOKS_PLAN.md  INSTRUCTIONS_MSW_UPGRADE_20260516.md  TODO.md  cli_redesign_spec.md  visualization.md  water.md
docs/rce/: DESIGN.md  REVIEW_publication_readiness.md  THOUGHT_PROCESS.md  TODO_ISSUES.md
docs/setup/: CAMERAS_2026.md  DHCP.md  SERIAL.md  WIRING.md  cameras.md  setup_config.md  sound.md
docs/tasks/: calibration_and_test.md  probabilistic_switching.md  probabilistic_switching_fixedsubjects.md  sequence.md
docs/tutorials/: 00_overview.md  01_install.md  02_first_session.md  03_setup_config.md  04_task_settings.md  05_config_overlays.md  06_subject_management.md  07_session_files.md  08_plot_spec.md  09_live_plot.md  10_monitor_ui.md  11_hooks.md  12_post_processing.md  13_hardware_abstraction.md  14_calibration.md  adding_setup.md  (+2 more)
main_project/: main_project.json
msw_open_ephys/oe_remote/: pyproject.toml  setup.cfg
msw_open_ephys/oe_remote/oe_remote/: __main__.py  controller.py  session.py
msw_refactor/: __init__.py
murine_shift_work/: __init__.py  stimulation.py
open_ephys_remote/: __init__.py  __main__.py  cli.py  controller.py  main_for_testing.py
playground/: batch_rce_barcode_decode_rate.py  debug_bpod.py  fabfile.py  find-usb-dev.sh  gui_settings.py  oe_remote_requests.py  outbound_travel_hist.py  plot_ephys_line_jitter.py  pyqtgraph_example_GraphicsLayout.py  qtpandas_test.py  rpi_gpio_receiver_test.py  run_task.py  run_task_2.py  run_video_preview.py  run_video_pyqtgraph_example_adjusted.py  shared_mem_obj.py
provision_rpi/: README.md  firmware-update.yaml  ssh-copy-id-all.sh
pybpod_lbr/: misc.py  stimulation.py
pybpod_remote_api/: tools.py
pybpod_tools/: misc.py  stimulation.py
recording_manager/: __init__.py
reinstall_instructions/: .tmux.conf  REINSTALL.md  ansible-playbook-test-install-miniconda-rpi.yaml  ansible-playbook-test-install-rcc.yaml  ansible-playbook-test.yaml  ansible-playbook-update-rpi-time.yaml  cron-script-send-ip-addr.sh  routing_script.bash
remote_ephys/: cli.py  control_functions.py
remote_python_manager/: manager.py  remote_process_manager_test.py
scripts/: __run_post_acquisition_tasks.bash  _clean_msw_files.bash  _clean_msw_files.sh  _convert_h264_to_mp4.bash  _convert_h264_to_mp4.sh  _move_data_to_central.bash  _move_data_to_central_only_intan.bash  _move_data_to_central_only_npxb.bash  _move_data_to_central_only_rpi.bash  _mv_all_data.bash  _patch_all_setups_config_files.bash  _patch_all_setups_msw.sh  _patch_all_setups_rcc.sh  _remove_all_data.sh  clean_msw_files.sh  clone_msw_repos.sh  collate_acquisition_data.sh  list_used_probe_serial_numbers.py  opto_calibration.py  patch_all_setups.bash  patch_all_setups_rcc.sh  patch_msw_and_rcc.sh  patch_rcc_on_rpi.sh  probe_bpods.py  push_configs_to_setups.sh  reinstall.sh  remove_all_data.sh  remove_sessions.sh  run_post_acquisition_tasks.bash  run_post_acquisition_tasks.sh  upload_data.sh  upload_data_parallel.sh
search/: search_index.json
shift_work/: stimulation.py
sketch_jan25a_digitalWrite_for_testing/: sketch_jan25a_digitalWrite_for_testing.ino
sketch_jan25b_digital_relay/: sketch_jan25b_digital_relay.ino
tests/: conftest.py  fabfile.py  gui_settings.py  list_repo_remotes.py  list_used_probe_serial_numbers.py  oe_remote_requests.py  plot_ephys_line_jitter.py  pyqtgraph_example_GraphicsLayout.py  qtpandas_test.py  run_task.py  run_task_2.py  run_video_preview.py  run_video_pyqtgraph_example_adjusted.py  shared_mem_obj.py  shared_mem_obj2.py  test__cli.py  test__configobj.py  test_calibration_objects.py  test_calibration_outliers.py  test_calibration_tasks_sim.py  test_cli_entrypoints.py  test_cli_evaluate.py  test_config_io.py  test_config_models.py  test_ephys_barcode_alignment.py  test_hardware_manager.py  test_hooks.py  test_host_session.py  test_integration_deps.py  test_logagent.py  test_manifest.py  test_msw_files.py  test_namespace.py  test_namespace_builder.py  test_namespace_readiness.py  test_optotagging.py  test_outbound_travel_hist.py  test_parent_session.py  test_plot_spec.py  test_post_and_action.py  (+22 more)
tools/: migrate_calibrations_to_setup_yaml.py  migrate_subjects_ini_to_yaml.py
(+576 files in other folders)
