[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "murineshiftwork"
dynamic = ["version"]
description = "Murine Shift Work — behavioural task acquisition with hardware support."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "Lars B. Rollik", email = "lars@rollik.me" },
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "acquisition-namespace>=1.2.2",
    "ttl-barcoder>=0.4.1",
    "msw-plugin-api>=0.1.0",
    "pydantic>=2.0",
    "tqdm",
    "rich",
    "pyyaml",
    "pyzmq",
    "numpy",
    "scipy",
    "pandas",
    "pybpod-api",
    "safe-and-collaborative-architecture",
    "sounddevice",
    "seaborn",
    "plotly>=5.0",
    "pre-commit>=4.6.0",
]

[project.urls]
Homepage = "https://github.com/larsrollik/murineshiftwork"
Documentation = "https://larsrollik.github.io/murineshiftwork/"
"Issue Tracker" = "https://github.com/larsrollik/murineshiftwork/issues"

[project.optional-dependencies]
dev = [
    "commitizen",
    "pytest",
    "pytest-cov",
    "pre-commit",
    "ruff",
    "mypy",
    "gitpython",
    "fastapi",
    "httpx",
    "uvicorn",
    "pyarrow",
    "murineshiftwork[pulsepal]",
]
docs = [
    "mkdocs-material",
]
oe = [
    "msw-open-ephys",
]
pulsepal = [
    "pypulsepal",
]
calibration = [
    "serial-scale-hx711",
    "serial-scale-bench",
]
keyboard = [
    "sshkeyboard",
]
qt = [
    "PyQt6",
    "pyqtgraph",
    "myterial",
    "opencv-python-headless",
]
rce = [
    "rpi-camera-ensemble[conductor]",
]
agent = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
]
full = [
    "murineshiftwork[calibration,keyboard,qt,agent,rce]",
]

[project.scripts]
murineshiftwork = "murineshiftwork.cli:run_cli"
msw = "murineshiftwork.cli:run_cli"

# External task packages register here — bundled tasks need no entry-point.
# Example (in an external package's pyproject.toml):
#   [project.entry-points."msw.tasks"]
#   my_task = "my_package.tasks.my_task.my_task"

# ---------------------------------------------------------------------------
# Build
# ---------------------------------------------------------------------------

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["src/murineshiftwork"]
artifacts = [
    "src/murineshiftwork/**/*.yaml",
    "src/murineshiftwork/**/*.yml",
]

[tool.hatch.build.targets.sdist]
include = [
    "/src/murineshiftwork",
    "/tests",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
    "/CITATION.cff",
    "/VERSION",
]

# ---------------------------------------------------------------------------
# Commitizen
# ---------------------------------------------------------------------------
# Bump workflow:
#   cz bump --yes    → reads conventional commits, determines next semver,
#                      updates [tool.commitizen] version + VERSION file,
#                      creates "bump: ..." commit and annotated tag v{version}.
#   git push && git push --tags → pushes bump commit + tag; triggers release CI.
#
# cz bump always produces a clean X.Y.Z tag — never dev or rc unless you pass
# --prerelease explicitly. Do NOT pass --prerelease in normal releases.
# .devN versions in pip show / __version__ between tags are computed at install
# time by hatch-vcs from git tags and are NOT written as git tags.
#
# version = "x.y.z" below is commitizen's own version tracking (updated on
# each bump commit). hatch-vcs derives the *package* version from git tags.
#
# Commit types that drive version:
#   feat:                      → minor  (x.1.0)
#   fix:                       → patch  (x.x.1)
#   feat!: / BREAKING CHANGE:  → major  (x.0.0)

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "commitizen"
version = "2.12.0"
tag_format = "v$version"
update_changelog_on_bump = false
version_files = ["VERSION"]

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=murineshiftwork --durations=0"

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------

[tool.ruff]
line-length = 88
indent-width = 4
exclude = ["external", "playground", "scripts"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "YTT", "SIM", "PTH", "TCH", "PYI"]
fixable = ["ALL"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------

[tool.mypy]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true
ignore_missing_imports = true
exclude = ["external"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------

[tool.uv]
environments = [
    "sys_platform == 'linux'",
    "sys_platform == 'darwin'",
    "sys_platform == 'win32'",
]

[tool.uv.workspace]
exclude = ["external/msw-plugin-api", "external/msw-open-ephys"]
