[metadata]
name = murine_shift_work
version = 0.2.2
author = Lars B. Rollik
author_email = L.B.Rollik@protonmail.com
;license = GPLv3
license_files = LICENSE
description = Murine Shift Work: Data acquisition software framework (developed for murine research)"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsrollik/murineshiftwork
project_urls =
	Issue Tracker = https://github.com/larsrollik/murineshiftwork/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GPLv3
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
packages = find:
python_requires = >=3.10
install_requires =
	configobj
	tqdm
	rich
	pyzmq
	numpy
	scipy
	pandas
	pybpod-api
	safe-and-collaborative-architecture
	; for pybpod
	sounddevice
	rpi_camera_colony
	sshkeyboard
	opencv-python-headless
	; opencv-python-headless fixes issue with qt plugin xcb https://forum.qt.io/topic/119109/using-pyqt5-with-opencv-python-cv2-causes-error-could-not-load-qt-platform-plugin-xcb-even-though-it-was-found/2

[options.packages.find]
where =

[options.extras_require]
dev =
	black
	pytest-cov
	pytest
	gitpython
	bump2version
	pre-commit
	flake8

[options.entry_points]
console_scripts =
	murineshiftwork = murine_shift_work.__init__:run_cli
	remote-ephys-controller = murine_shift_work.__init__:run_remote_ephys

[options.package_data]
* = *.config *.yaml

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = __init__.py,build,__pycache__,.git,tests
