[metadata]
name = murineshiftwork
version = 1.0.0
author = Lars B. Rollik
author_email = L.B.Rollik@protonmail.com
license = LicenseRef-PolyForm-Internal-Use-1.0.0
license_files = LICENSE
description = Murine Shift Work: Data acquisition software framework (developed for murine research)"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsrollik/murineshiftwork
project_urls =
	Issue Tracker = https://github.com/larsrollik/murineshiftwork/issues
classifiers =
	Programming Language :: Python :: 3
	License :: OSI Approved :: GPLv3
	Operating System :: OS Independent

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
	pydantic>=2.0
	configobj
	tqdm
	rich
	pyyaml
	pyzmq
	numpy
	scipy
	pandas
	pybpod-api
	safe-and-collaborative-architecture
	sounddevice
	opencv-python-headless
	seaborn

[options.packages.find]
where = src

[options.extras_require]
dev =
	black
	pytest-cov
	pytest
	gitpython
	bump2version
	pre-commit
	flake8
keyboard =
	sshkeyboard
qt =
	PyQt6
	pyqtgraph
	myterial
rce =
	rpi_camera_ensemble

[options.entry_points]
console_scripts =
	murineshiftwork = murineshiftwork.__init__:run_cli

[options.package_data]
* = *.config *.yaml

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 79
max-complexity = 18
select = B,C,E,F,W,T4,B9
exclude = __init__.py,build,__pycache__,.git,tests
