[metadata]
name = oe-remote
version = attr: oe_remote.__version__
author = Lars B. Rollik
author_email = L.B.Rollik@protonmail.com
license_files = LICENSE
description = Remote control for Open Ephys GUI v1+
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsrollik/murineshiftwork

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.10
install_requires =
    requests
#    rich
#    numpy

[options.packages.find]
where =

[options.entry_points]
console_scripts =
    oe-remote = oe_remote:run_cli

[options.extras_require]
dev =
    black
    pytest
    pre-commit
    bump2version

[flake8]
ignore = E203, E266, E501, W503, F403, F401
max-line-length = 88
exclude = __init__.py,build,__pycache__,.git
